Bug 104598 - Black separator/border lines appear in UI around panes (Side Bar, Navigator) and rulers (part in margin)
Summary: Black separator/border lines appear in UI around panes (Side Bar, Navigator) ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.3.0.1 rc
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.4.0 target:5.3.1
Keywords: bibisected, bisected, regression
: 105736 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-12-12 09:26 UTC by Cor Nouws
Modified: 2017-02-03 21:42 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
image showing unexpected black lines (17.38 KB, image/png)
2016-12-12 09:27 UTC, Cor Nouws
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Cor Nouws 2016-12-12 09:26:10 UTC
at places where I do not expect them..
Comment 1 Cor Nouws 2016-12-12 09:27:35 UTC
Created attachment 129519 [details]
image showing unexpected black lines

version 53dbc419b2e886b345a3512cf11e035ff2b7651b
Comment 2 Xisco Faulí 2016-12-14 13:45:03 UTC
Confirmed in

Version: 5.4.0.0.alpha0+
Build ID: 634589b340316ba64b731b4d923c1056be415494
CPU Threads: 4; OS Version: Linux 4.8; UI Render: default; VCL: gtk2; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

and 

Version: 5.4.0.0.alpha0+
Build ID: 634589b340316ba64b731b4d923c1056be415494
CPU Threads: 4; OS Version: Linux 4.8; UI Render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

but not in

Version: 5.2.0.0.alpha1+
Build ID: 5b168b3fa568e48e795234dc5fa454bf24c9805e
CPU Threads: 4; OS Version: Linux 4.8; UI Render: default; 
Locale: ca-ES (ca_ES.UTF-8)
Comment 3 Aron Budea 2017-01-24 03:16:19 UTC Comment hidden (bibisection)
Comment 4 Aron Budea 2017-01-24 03:17:59 UTC
Inappropriate black lines start with the commit referenced below. Adding Cc: to Caolán McNamara, please take a look.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=8114a779143a7f0042d7e15b476037315ed2b4c3
author		Caolán McNamara <caolanm@redhat.com>	2016-11-29 13:22:33 (GMT)
committer	Caolán McNamara <caolanm@redhat.com>	2016-11-29 13:25:06 (GMT)

"Resolves: tdf#90214 set gtk[2|3] lightshadow halfway between darkshadow and bg"
Comment 5 Commit Notification 2017-01-25 10:13:13 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=19663d39f400dac3682228f3f0146807bbbebe74

Resolves: tdf#104598 make bright theme shadow the same as it always was

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Caolán McNamara 2017-01-25 13:26:47 UTC
tweaked things to get the traditional shadow color under bright gtk[2|3] themes and an alternative shadow color for dark themes.
Comment 7 Commit Notification 2017-01-26 13:19:31 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ef7aefef00bddb5008a4fd071f547cef14ce0c3e&h=libreoffice-5-3

Resolves: tdf#104598 make bright theme shadow the same as it always was

It will be available in 5.3.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Cor Nouws 2017-01-30 15:02:47 UTC
OK in Build ID: c6dd735afb2e1b3837c4f8c5659f52fafab4c56f

thanks Caolán!
Comment 9 Aron Budea 2017-02-03 21:42:07 UTC
*** Bug 105736 has been marked as a duplicate of this bug. ***