vcl/unx/gtk3/gtk3salnativewidgets-gtk.cxx
@@ -2585,14 +2585,12 @@ void GtkSalGraphics::updateSettings( AllSettings& rSettings )
         ::Color aDarkShadowColor = getColor( color );
         aStyleSet.SetDarkShadowColor( aDarkShadowColor );
 
-        int nRedDiff = aBackFieldColor.GetRed() - aDarkShadowColor.GetRed();
-        int nGreenDiff = aBackFieldColor.GetGreen() - aDarkShadowColor.GetGreen();
-        int nBlueDiff = aBackFieldColor.GetBlue() - aDarkShadowColor.GetBlue();
-
-        ::Color aShadowColor(aBackFieldColor.GetRed() + nRedDiff / 2,
-                             aBackFieldColor.GetGreen() + nGreenDiff / 2,
-                             aBackFieldColor.GetBlue() + nBlueDiff / 2);
-        aStyleSet.SetShadowColor( aShadowColor );
+        ::Color aShadowColor(aBackColor);
+        if (aDarkShadowColor.GetLuminance() > aBackColor.GetLuminance())
+            aShadowColor.IncreaseLuminance(64);
+        else
+            aShadowColor.DecreaseLuminance(64);
+        aStyleSet.SetShadowColor(aShadowColor);
 
         g_object_unref( pCStyle );
 
